# workflow_on_custom_image

./: .gitignore  CMakeLists.txt  Dockerfile  LICENSE  README.md
.github/workflows/: main.yml  main_with_custom_container.yml  main_with_default_container.yml
ci/: run_test.sh
scripts/: install_dependencies.sh
src/: CMakeLists.txt  main.cpp
